.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0b1 - Unreleased
------------------

- Remove prefs_group_modify.cpy as we no longer use it. Adjust tests accordingly.
  [esteele]

- Rework the prefs_group_details form to properly redirect back to the new
  @@usergroup-groupprefs page when creating a new groups, and postback to
  itself when modifying existing groups.
  [esteele]
  
- Add popup for add group form.
  [smcmahon]

- Pass group title and description through to the editGroups request, to
  ensure the those properties on the groups are updated. Allows the display of
  titles in @@usergroup-groupprefs
  Closes http://dev.plone.org/plone/ticket/7277
  Closes http://dev.plone.org/plone/ticket/9828
  [esteele, erikrose]

- User-add dialog will no longer hide errors (e.g., inability to mail).
  fixes http://dev.plone.org/plone/ticket/9964
  [smcmahon]

- Changed noform action for user add ajax overlay form to "reload" to
  fix http://dev.plone.org/plone/ticket/9957
  [smcmahon]

- Changed login form overlay handling to deal with the need for a redirect
  if logging in from pwreset_finish.
  Closes http://dev.plone.org/plone/ticket/5548
  [smcmahon]

- Changed the ``Add Plone site`` link in the ZMI to use the basic form. Too
  many regular users are still using the ZMI.
  [hannosch]

- Fix template errors in author_feedback_template.pt which prevented author
  feedback from being sent. Allow anonymous users to send email to authors.
  Closes http://dev.plone.org/plone/ticket/9730
  [esteele]

- Update prefs_user_details.cpt and prefs_user_memberships.cpt templates to
  fit the current styling of other configuration screens. 
  Closes http://dev.plone.org/plone/ticket/9660
  [esteele]

- Avoid leading spaces in the class attribute of the body element.
  Refs http://dev.plone.org/plone/ticket/9489.
  [dukebody]
